--- a/app/src/main/res/drawable/radio_expense_selector.xml
+++ b/app/src/main/res/drawable/radio_expense_selector.xml
@@ -2,14 +2,15 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorAccent" />
-            <corners android:radius="6dp" />
+            <corners android:radius="12dp" />
+            <solid android:color="@color/colorExpenseLight" />
+            <stroke android:color="@color/colorExpense" android:width="2dp" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
-            <corners android:radius="6dp" />
+            <corners android:radius="12dp" />
+            <solid android:color="@color/colorExpenseLight" />
         </shape>
     </item>
 </selector>
